--- a/PolynomialRegression.ipynb
+++ b/PolynomialRegression.ipynb
@@ -3,10 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "693220b2",
+   "id": "c78bdbc7",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# импортируем библиотеки\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -21,21 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "b365daf2",
+   "execution_count": 82,
+   "id": "e80c4bbd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import operator"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "e9729ee8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# формируем выборку для x и y значений \n",
+    "# зависимость зададим формулой ниже\n",
     "np.random.seed(0)\n",
     "x = 5-2*np.random.normal(1,4,200)\n",
     "y=x**3+0.5*x**2-5*x+ np.random.normal(2,2,200)\n"
@@ -44,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "d30998f5",
+   "id": "3747168d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "8b1093e8",
+   "id": "3daed898",
    "metadata": {},
    "outputs": [
     {
@@ -72,6 +65,7 @@
     }
    ],
    "source": [
+    "# зависимость x от y\n",
     "plt.scatter(x,y)\n",
     "plt.show()"
    ]
@@ -79,27 +73,33 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "eb8c9489",
+   "id": "6e6452e7",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# разбиваем выборку на обучающую (train) и тестовую(test) выборку\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.6)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "f700e7e9",
+   "id": "a0865d67",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# создадим функцию, которая будет выводить модель\n",
     "def make_regression(x_train, x_train_poly,  y_train, x_test, x_test_poly,  y_test):\n",
     "    model = LinearRegression()\n",
-    "    model.fit(x_train_poly, y_train)\n",
+    "    model.fit(x_train_poly, y_train) # обучаем модель (в качестве входных данных подаем преобразованные \n",
+    "     # данные (ниже polynomial_features )), которые являются составными частями общей полиномиальный функции\n",
+    "        # Для полинома 3 степени - здесь будет набор из 4 аргументов\n",
     "    \n",
+    "    # ошибка обучающей и тестовой выборки - показывает качество модели\n",
     "    print(\"mean_squared_error_TRAIN\", mean_squared_error( y_train, model.predict(x_train_poly) ))\n",
     "    print(\"mean_squared_error_TEST\", mean_squared_error( y_test, model.predict(x_test_poly) ))  \n",
     "    \n",
+    "    # чем ближе к 1 показатель r2_score - тем выше качество модели\n",
     "    print(\"R2 TRAIN:\", r2_score(y_train,model.predict(x_train_poly)))\n",
     "    print(\"R2 TEST:\", r2_score(y_test,model.predict(x_test_poly)))\n",
     "    \n",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "96b3b1fa",
+   "id": "fc41e2ce",
    "metadata": {},
    "outputs": [
     {
@@ -144,6 +144,7 @@
     }
    ],
    "source": [
+    "#желтым цветом отображаем предсказание модели на тестовой выборке\n",
     "polynomial_features = PolynomialFeatures(degree = 3)\n",
     "x_train_poly = polynomial_features.fit_transform(x_train)\n",
     "x_test_poly = polynomial_features.transform(x_test)\n",
@@ -153,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "6909cde2",
+   "id": "e61ecd53",
    "metadata": {},
    "outputs": [
     {
@@ -168,13 +169,15 @@
     }
    ],
    "source": [
+    "# коэффициент R2 - почти 1, что говорит о том, что модель прекрасно справляется с предсказанием данных \n",
+    "# полученные коэффициенты регрессии максимально близки к исходной функции\n",
     "m.coef_"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a46a33b",
+   "id": "748aee4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7571848a",
+   "id": "1e0b9719",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -192,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d837604f",
+   "id": "0512a9d3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -200,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8809067e",
+   "id": "49512ed5",
    "metadata": {},
    "outputs": [],
    "source": []
